--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -186,6 +186,8 @@ cy:
     user name: "Enw defnyddiwr "
     agreement: "Rwy’n cytuno gyda %{terms_link} YouVersion."
     terms and conditions: "Termau ac amodau "
+    email: "Ebost "
+    mobile: "Ffôn lôn "
     facebook sign up success: "Gwych! Mae Facebook wedi’ch derbyn. Dewiswch enw defnyddiwr a chyfrinair YouVersion i barhau."
     register: "Cofrestru "
     thanks for registering: "Diolch am gofrestru!"
@@ -346,7 +348,6 @@ cy:
       picture_too_large: "Dylai’r llun fod yn llai na 1 megabeit "
       picture_invalid_type: "Dylai’r llun fod yn JPG, PNG, neu GIF"
       picture_creation form errors: "Mae’r gwall(au) canlynol wedi rhwystro uwchlwytho’ch llun: "
-      updated picture: "Gwych! Diweddarwyd eich llun."
       updated notifications: "Gwych! Diweddarwyd eich gosodiadau hysbysiadau."
       notifications token error: "Tocyn annilys, mewngofnodwch i olygu eich gosodiadau hysbysu. "
       notification errors: "Rhwystrodd y gwall(au) canlynol ddiweddaru’ch hysbysiadau: "
@@ -442,7 +443,6 @@ cy:
     which reading: "%{current}%{total} "
     done reading: "Wedi gorffen"
     no content: "Does dim cynnwys wedi'i glustnodi am heddiw felly mae marc ‘wedi ei gwblhau’ arno."
-    read today: "Gweld Darlleniad Heddiw "
     devotional: "Defosiynol"
     completion status _ below percentage: "Cwblhawyd"
     current progress html: "Diwrnod <b>%{day}</b>o’r <b>%{total_days}</b>"
