--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -1,36 +1,39 @@
 id:
+  time:
+    formats:
+      votd: "%-d %B %Y"
   social:
     intro page:
-      main heading: "Perbincangan & Penemuan"
+      main heading: "Percakapan & Penemuan"
       main description: "Cara baru menjelajahi Alkitab dengan teman-teman terpercaya"
       moment:
         user aaron: "Aaron Steele"
         user andy: "Andy Knight"
         timestamp: "5 hari yang lalu"
-        title: "Tersorot Kitab Mazmur 31:8"
+        title: "Mazmur 31:8 dimarkahi"
         verse: "Aku akan bersorak-sorak dan bersukacita karena kasih setia-Mu, sebab Engkau telah menilik sengsaraku, telah memperhatikan kesesakan jiwaku."
         reference: "Mazmur 31:8"
         discover:
           copy: "Telusuri dan belajar bersama teman-teman Anda sewaktu mereka menambahkan sorotan, tanda halaman dan catatan mereka."
-          button: "Dimana saya dapat mulain?"
+          button: "Dimana saya dapat mulai?"
         share:
           copy: "Bagikan percakapan terbuka tentang Firman Tuhan."
-          button: "Mari mulai dengan mencari beberapa teman-teman."
+          button: "Mari mulai dengan mencari beberapa teman."
         likes:
           info: "dan 4 lagi seperti ini."
         comments:
           first:
-            text: "Sungguh perlu mendengar tetang ini hari ini, terima kasih. Mari kita coba lanjutan lagi ini."
+            text: "Benar-benar perlu mendengar hal itu hari ini, terima kasih. Mari kita lanjutan lagi nanti!"
             time: "kira-kira 3 jam yang lalu."
           second:
             text: "Amin, saya juga. Mengirimkan Anda sebuah email sekarang."
             time: "sekitar 27 menit yang lalu"
           field placeholder: "Tulis Komentar..."
     widget:
-      timeline: "Waktu"
+      timeline: "Linimasa"
       no activity yet: "Belum ada aktivitas sama sekali."
     moment:
-      read all: "Terbaca Semua"
+      read all: "Baca Semua"
       read less: "Membaca lebih sedikit"
     share: "Bagikan"
     my connections: "Akun terkait"
@@ -70,6 +73,7 @@ id:
   meta:
     kids_app:
       title: "Aplikasi Alkitab untuk anak-anak."
+      description: "Aplikasi Alkitab untuk Anak-anak dilansir pada Hari Ucapan Syukur, 28 Nopember! Cerita Alkitab yang interaktif gratis untuk aplikasi iOS dan Android. Lihat di bible.com/kids"
     100million:
       title: "Dimulai dengan 100 juta"
       description: "Aplikasi Alkitab telah dipasang hampir 100 juta kali - kejadian penting yang luar biasa! Namun ini hanya permulaan saja. Unduh Aplikasi Alkitab gratis hari ini - dan bagikan app ini kepada teman-teman anda.  Mari kita buat sejarah bersama-sama."
@@ -186,6 +190,17 @@ id:
     lower: "atau"
     upper: "ATAU"
   moments:
+    scripture unavailable: "Bacaan Alkitab tidak tersedia."
+    could not load: "Tidak dapat memuat"
+    could not load verse: "Tidak dapat memuat ayat"
+    showing related: "Menunjukkan momen-momen terkait"
+    return to: "Kembali ke"
+    time past: "%{ago} yang lalu"
+    user likes this: "%{last_liker_link} menyukai ini"
+    likes count more: "%{likes_count} orang lagi"
+    likes count 2 more: "%{likes_count} orang lagi"
+    likes count 3 or more: "%{likes_count} orang lagi"
+    users like this: "%{last_liker_link} dan %{more_link} menyukai ini"
     vod:
       title: "Ayat hari ini"
     friendship:
@@ -195,10 +210,10 @@ id:
       profile update button: "Perbaharui profil Anda"
       sharing text: "Bagi ayat-ayat dengan media-media sosial"
       sharing button: "Aktifkan berbagi"
-      friends text: "Lihat saat-saat beberapa teman Anda dalam ber-Alkitab."
+      friends text: "Lihat momen teman-teman Anda dalam Alkitab."
       friends button: "Cari teman"
     action:
-      go to scripture: "Menuju firman"
+      go to scripture: "Pergi ke Alkitab"
       load more: "Muat lebih banyak"
       like: "Suka"
       liked: "Menyukai"
@@ -209,16 +224,16 @@ id:
       comment: "Komentar"
       comment title: "Lihat semua komentar"
       edit: "Sunting"
-      edit highlight title: "Edit sorotan ini"
-      edit bookmark title: "Sunting penanda ini"
-      edit note title: "Edit catatan ini"
+      edit highlight title: "Sunting sorotan ini"
+      edit bookmark title: "Sunting markah ini"
+      edit note title: "Sunting catatan ini"
       delete: "Hapus"
       delete confirm: "Apakah anda yakin?"
       delete highlight title: "Hapus sorotan ini"
       delete bookmark title: "Hapus markah ini"
       delete note title: "Hapus catatan ini"
   notifications:
-    title: "Notifikasi"
+    title: "Pemberitahuan"
     none: "Anda tidak memiliki pemberitahuan apapun"
     no new: "Tidak ada pemberitahuan baru"
     view all: "Lihat semua Pemberitahuan"
@@ -230,12 +245,12 @@ id:
   comments:
     view all N: "Tampilkan semua %{count} komentar"
     post comment: "Kirim komentar"
-    create success: "Sukses! Komentar Anda telah ditampilkan."
+    create success: "Berhasil! Komentar Anda telah ditampilkan."
     create failure: "Komentar tidak dapat dikirim"
-    destroy success: "Komentar dihapus"
+    destroy success: "Komentar sudah dihapus"
     destroy failure: "Komentar tidak dapat dihapus"
     form:
-      save button: "Tercantum"
+      save button: "Beritakan"
   friends:
     you have N friends: "Anda memiliki %{count} teman"
     none me: "Berbagi momen bacaan Alkitab Anda seperti markah, sorotan, dan catatan dengan teman-teman terdekat dan keluarga Anda."
@@ -244,7 +259,7 @@ id:
       heading: "Tidak sedang berteman"
       description: "Anda harus berteman dengan orang ini untuk dapat melihat teman-teman yang dimilikinya."
     limit notice: "Anda dapat memiliki teman sebanyak 150 teman"
-    limit description: "Membatasi persahabatan anda pada aplikasi Alkitab kepada orang yang Anda kenal betul akan menciptakan lingkungan yang tepat untuk berbagi perbincangan jujur dan penemuan-penemuan Anda dengan teman kepercayaan Anda."
+    limit description: "Membatasi persahabatan Anda pada Aplikasi Alkitab kepada orang yang Anda kenal betul akan menciptakan lingkungan yang tepat untuk berbagi perbincangan jujur dan penemuan-penemuan Anda dengan teman kepercayaan Anda."
   friendships:
     find friends title: "Cari teman"
     search by name: "Mencari berdasarkan nama"
@@ -254,7 +269,7 @@ id:
       search by name: "Mencari berdasarkan nama"
       search button: "Ke"
     offer success: "Permohonan berteman terkirim"
-    offer failure: "Kesalahan dalam mengirim permohonan untuk berteman"
+    offer failure: "Kesalahan dalam pengiriman permohonan berteman"
     create success: "Berhasil! Sekarang Anda berteman."
     create failure: "Kesalahan dalam menjalin persahabatan"
     destroy success: "Permohonan ditolak"
@@ -266,26 +281,26 @@ id:
     status:
       pending: "Permohonan tertunda"
       friends: "Teman-teman"
-    user wants friendship: "%{pengguna} ingin menjadi teman Anda"
+    user wants friendship: "%{user} ingin menjadi teman Anda"
     user wants friendship partial: "ingin menjadi teman Anda"
     form:
       remove friend button: "Melepaskan pertemanan"
       remove friend button title: "Hapus orang ini dari daftar teman anda"
       add friend button: "Menambah teman"
-      add friend button title: "Mengirimkan %{user} permintaan pertemanan"
+      add friend button title: "Kirimkan %{user} permohonan untuk berteman"
       accept button: "Terima"
       accept request button: "Menerima permintaan"
       ignore button: "Abaikan"
-      ignore request button: "Mengabaikan permintaan"
+      ignore request button: "Abaikan permintaan"
   notes:
-    none user: "%{pengguna} tidak memiliki catatan apapun."
+    none user: "%{username} belum membuat catatan apapun."
     blank slate:
       heading: "Anda belum mempunyai catatan apapun"
-      description: "Ketika anda sedang membaca Alkitab, di saat anda mendengar suara Tuhan yang kecil dan tenang berbicara, anda bisa menambahkan pikiran tersebut di sini.  Catatan anda akan disimpan <em>sebagai Pribadi</em> secara standar. Bila anda ingin membagikan catatan tersebut dengan Teman, buka catatan tersebut dan ubah menjadi <em>Umum</em>."
+      description: "Ketika Anda sedang membaca Alkitab, di saat Anda mendengar suara Tuhan yang kecil dan tenang berbicara, Anda bisa segera tambahkan pemikiran tersebut di sini.  Catatan Anda akan disimpan <em>sebagai pribadi</em> secara standar. Bila Anda ingin membagikan catatan dengan teman-teman, buka catatan tersebut dan ubahlah ke <em>umum</em>."
     form:
       title field: "Judul:"
       content field: "Isi:"
-      highlight field: "Tandai: (pilihan)"
+      highlight field: "Sorotan: (pilihan)"
       reference field: "Referensi:"
       status field: "Status:"
       save button: "Simpan"
@@ -360,6 +375,8 @@ id:
     last name: "Nama belakang"
     agreement: "Saya setuju dengan %{terms_link} YouVersion."
     terms and conditions: "syarat dan ketentuan"
+    email: "Email"
+    mobile: "Piranti bergerak"
     facebook sign up success: "Selamat! Anda telah disahkan lewat Facebook. Pilihlah nama pengguna dan kata sandi YouVersion untuk melanjutkan."
     register: "Daftar"
     thanks for registering: "Terima kasih sudah mendaftar!"
@@ -377,7 +394,7 @@ id:
     update profile: "Perbarui Profil"
     go to your profile: "Ke Profil Saya"
     other user profile: "Profil %{username}"
-    my password: "Ubah kata sandi saya"
+    my password: "Ubah Kata Sandi Saya"
     edit password: "Ubah Kata Sandi"
     edit password errors: "Kesalahan (-kesalahan) ini menghalangi pengubahan kata sandi Anda:"
     picture: "Gambar"
@@ -397,8 +414,8 @@ id:
     my friends: "Teman"
     my notes: "Catatan"
     user friends: "Teman-teman %{user}"
-    my bookmarks: "Markah saya"
-    user bookmarks: "Markah dari %{user}"
+    my bookmarks: "Markah Saya"
+    user bookmarks: "Markah %{user}"
     my badges: "Lencana Saya"
     revised date: "Terakhir diubah pada %{date}"
     update email copy: "Masukkan alamat email baru dan klik Perbarui Email. Kami akan mengirimi Anda tautan untuk menetapkan alamat email baru Anda."
@@ -504,13 +521,13 @@ id:
       general text: "do not translate"
     profile:
       blank slate:
-        heading: "Lanjutkan, (masih) tidak ada yang dapat diihat disini"
-        description: "Mulailah terlibat dengan Alkitab, atau teman-teman anda, dan halaman ini akan menampilkan hal-hal lampau yang telah anda alami."
-      visit friend: "Kunjungi profil %{teman}"
-      tab activity: "Kegiatan"
+        heading: "Lanjutkan, (masih) tidak ada yang dapat diihat di sini"
+        description: "Mulailah terlibat dengan Alkitab, atau teman-teman Anda, dan halaman ini akan menampilkan hal-hal lampau yang telah Anda alami."
+      visit friend: "Kunjungi profil %{friend}"
+      tab activity: "Aktivitas"
       tab friends: "Teman-teman"
       tab notes: "Catatan"
-      tab bookmarks: "Penanda"
+      tab bookmarks: "Markah"
       tab highlights: "Sorotan"
       tab badges: "Lencana"
       first name: "Nama Depan"
@@ -524,17 +541,18 @@ id:
       language: "Bahasa"
       updated: "Berhasil! Anda telah memperbarui profil Anda."
       error: "Maaf, ada kesalahan saat memperbarui profil Anda."
-      current password: "Kata Sandi terkini"
-      new password: "Kata Sandi baru"
-      confirm password: "Konfirmasikan kata sandi"
-      avatar file: "Pilih berkas sebagai gambar Anda"
+      current password: "Kata Sandi Terkini"
+      new password: "Kata Sandi Baru"
+      confirm password: "Konfirmasikan Kata Sandi"
+      avatar file: "Pilih berkas untuk gambar Anda"
       avatar help: "Imej bisa dalam format JPG,PNG atau GIF. Imej anda akan diubah menjadi ukuran 48x48. Kapasitas maksimal berkas adalah 1MB."
       picture error: "Maaf, ada kesalahan saat memperbarui gambar Anda"
       picture_empty: "Silakan pilih gambar untuk diunggah"
       picture_too_large: "Gambar harus lebih kecil dari 1 megabyte"
+      transfer_too_slow: "Pilih gambar yang lebih kecil atau temukan sambungan yang lebih cepat"
       picture_invalid_type: "Gambar harus JPG, PNG, atau GIF"
       picture_creation form errors: "Kesalahan(-kesalahan) berikut menghalangi pembaharuan gambar Anda:"
-      updated picture: "Berhasil! Anda telah memperbarui gambar Anda."
+      updated picture: "Sukses! Anda telah memperbarui gambar Anda. Diperlukan beberapa menit untuk avatar Anda diperbarui."
       updated notifications: "Berhasil! Anda telah memperbarui pengaturan notifikasi Anda."
       notifications token error: "Token tidak berlaku, silakan masuk untuk menyunting pengaturan notifikasi Anda."
       notification errors: "Kesalahan (-kesalahan) berikut menghalangi pembaruan pemberitahuan Anda:"
@@ -554,8 +572,8 @@ id:
       update: "Perbarui Notifikasi"
       friendships: "Beritahu saya tentang permohonan untuk berteman"
       moments: "Beritahu saya tentang aktifitas teman-teman saya"
-      comments: "Beritahu saya tentang aktivitas komentar-komentar saya"
-      likes: "Beritahu saya tentang siapa yang menyukai aktifitas saya"
+      comments: "Beritahu saya tentang komentar atas aktifitas saya"
+      likes: "Beritahu saya tentang aktifitas saya yang disukai"
   bookmarks:
     new: "Markah Baru"
     edit: "Sunting"
@@ -570,10 +588,10 @@ id:
     not found: "Markah memberi Anda panduan referensi cepat ke perikop favorit Anda ataupun ke pasal terakhir yang Anda baca di kitab tertentu. Untuk menambahkan markah, pilih ayat di pembaca Alkitab dan kemudian klik tombol Dipilih yang ada di bagian teratas dari pembaca."
     other user not found: "%{username} belum menyimpan markah apapun."
     creation form errors: "Kesalahan(-kesalahan) berikut menghalangi pembuatan markah Anda:"
-    create success: "Sukses! Sorotan Anda telah tersimpan."
-    destroy success: "Penanda dihapus"
-    destroy failure: "Kesalahan dalam menghapus penanda"
-    update success: "Penanda telah diperbarui"
+    create success: "Berhasil! Sorotan Anda telah tersimpan."
+    destroy success: "Markah Dihapus"
+    destroy failure: "Kesalahan dalam menghapus markah"
+    update success: "Markah diperbarui"
     labels placeholder: "Pisahkan beberapa label dengan koma"
     save: "Simpan Markah"
     confirm delete: "Ya, saya yakin"
@@ -587,14 +605,14 @@ id:
     none user: "%{username} tidak memiliki markah"
     blank slate:
       heading: "Tandai ayat-ayat yang bermakna"
-      description: "Ketika membaca Alkitab, pilih sebuah ayat dan tandai. Kembali kesini jika ingin membaca, mengedit atau menghapus penanda ini."
+      description: "Ketika membaca Alkitab, pilih sebuah ayat dan markahi. Kembali ke sini untuk melihat, mengedit atau menghapus markah Anda."
     form:
       title field: "Judul:"
       reference field: "Referensi:"
       labels field: "Label-label (dipisahkan koma):"
-      highlight field: "Tandai: (pilihan)"
+      highlight field: "Sorotan: (pilihan)"
       colors field: "Warna:"
-      update button: "Perbarui penanda"
+      update button: "Perbarui Markah"
       save button: "Simpan Markah"
   badges:
     earned a badge: "Dapat Lencana"
@@ -604,11 +622,14 @@ id:
     none user: "%{username} belum memperoleh lencana apapun."
   plans:
     widget:
-      my plans: "Programku"
+      my plans: "Rencana Saya"
       start reading: "Mulai baca"
-      view my plans: "Tampilan Rencana Bacaan Saya"
+      view my plans: "Tampikan Rencana Saya"
       featured plans: "Rencana Bacaan Pilihan"
-      view all plans: "Tampilkan semua Rencana Bacaan"
+      view all plans: "Tampilkan Semua Rencana"
+      reading: "bacaan"
+      readings: "bacaan"
+      readings 5 or more: "bacaan"
     settings: "Pengaturan"
     privacy:
       visible to friends?: "Apakah Anda ingin aktivitas rencana bacaan ini terlihat oleh teman-teman Anda?"
@@ -654,7 +675,7 @@ id:
     done reading: "Selesai"
     no verses: "Tidak ada ayat-ayat untuk hari ini"
     no content: "Rencana Anda tidak memiliki bacaan ayat suci terjadwal untuk hari ini, jadi telah ditandai selesai."
-    read today: "Lihat Bacaan Hari Ini"
+    read today: "Bacaan hari ini"
     devotional: "Renungan"
     completion status _ below percentage: "Selesai"
     current progress html: "Hari ke <b>%{day}</b> dari <b>%{total_days}</b>"
@@ -755,22 +776,22 @@ id:
     none: "Maaf, suara tidak tersedia untuk versi ini."
     chapter only: "Maaf, suara tidak tersedia untuk ayat-ayat. Lihat di pembaca untuk pasal suara."
     close player menu: "Tutup"
-    publisher website: "Situs web penerbit"
+    publisher website: "Situs Web Penerbit"
   highlights:
     title: "Sorotan"
     blank slate:
       heading: "Tandai ayat-ayat yang bermakna"
-      description: "Ketika membaca Alkitab, pilih sebuah ayat dan tandai. Kembali ke sini untuk melihat, mengedit atau menghapus tanda tersebut."
-    none user: "%{username} tidak memiliki hal-hal yang ditandai"
+      description: "Ketika membaca Alkitab, pilih sebuah ayat dan soroti. Kembali ke sini untuk melihat, menyunting atau menghapus sorotan Anda."
+    none user: "%{username} tidak memiliki sorotan"
     choose color: "Pilih Warna"
     create success: "Berhasil! Sorotan Anda tersimpan"
     create failure: "Kesalahan dalam menyimpan sorotan"
-    destroy success: "Sorotan telah dihapus"
-    destroy failure: "Kesalahan dalam menghapus hal yang ditandai"
+    destroy success: "Sorotan dihapus"
+    destroy failure: "Kesalahan dalam menghapus sorotan"
     creation error: "Maaf, tidak dapat memberi sorotan."
     delete error: "Maaf, sorotan tidak bisa disingkirkan."
     form:
-      save button: "Simpan tanda warna sorotan"
+      save button: "Simpan Sorotan"
   searching:
     bible: "Alkitab"
     plans: "Program"
@@ -779,10 +800,11 @@ id:
     total results: "Sekitar %{total} Hasil"
     suggestion html: "Apakah maksud Anda %{suggestion_link}?"
     all versions: "Semua Versi %{language_name}"
-    results for: "Cari hasil pencarian untuk:"
+    results for: "Cari hasil untuk:"
   donate:
     donate now: "Sumbang Sekarang"
     donate now intl: "atau menyumbang secara internasional"
+    enter amount: "Masukan suatu jumlah"
     promo 1: "Untuk setiap $1 anda, 10 orang lagi mendapatkan akses ke  Alkitab di ponsel mereka."
     promo 2: "Dengan YouVersion, Alkitab selalu dekat. Tonton video kami."
     promo 3: "Tahun ini, lebih dari 5 milyar orang akan menggunakan ponsel. Beri donasi sekarang."
@@ -979,6 +1001,11 @@ id:
         tagline: "Mari kita mengukir sejarah bersama."
         button: "Bagikan Aplikasi Alkitab"
   ui:
+    characters remaining: "karakter tersisa"
+    yes button: "Ya"
+    no button: "Tidak"
+    loading indicator text: "Sedang memuat ..."
+    loading: "Sedang memuat"
     pagination:
       next page: "Halaman Berikut"
       previous page: "Halaman sebelumnya"
