--- a/config/locales/lt.yml
+++ b/config/locales/lt.yml
@@ -43,7 +43,7 @@ lt:
   my picture: "Atnaujinti Mano Nuotrauką"
   my notifications: "Valdyti Pranešimus"
   my devices: "Prijungti Įrenginiai"
-  language name: "Angliškai"
+  language name: "Lietuvių"
   sign up: "Prisiregistruoti"
   have an account: "Jau Turite Paskyrą?"
   no account: "Neturite Paskyros?"
@@ -164,6 +164,7 @@ lt:
     user name: "Vartotojo vardas"
     agreement: "Aš sutinku su „YouVersion\" %{terms_link}."
     terms and conditions: "terminai ir sąlygos"
+    mobile: "Mobilusis"
     facebook sign up success: "Puiku! Jūs prisijungėte su „Facebook\". Jei norite tęsti, išsirinkite „YouVersion\" vartotojo vardą ir slaptažodį."
     register: "Registruotis"
     thanks for registering: "Ačiū už registraciją!"
@@ -265,7 +266,6 @@ lt:
       confirm password: "Patvirtinkite Slaptažodį"
       avatar file: "Pasirinkite failą savo nuotraukai"
       avatar help: "Nuotraukos gali būti JPG, PNG arba GIF formatų. Jūsų nuotrauka bus konvertuota į 48x48 miniatiūrą. Didžiausias failo dydis gali būti 1 MB. "
-      updated picture: "Pavyko! Jūs atnaujinote savo nuotrauką."
       updated notifications: "Pavyko! Jūs atnaujinote savo pranešimų nustatymus."
       edit: "Redaguoti"
     password:
@@ -335,7 +335,6 @@ lt:
     subscribe to plan: "Pradėti Šį Planą"
     previous day: "Buvusi Diena"
     next day: "Kita Diena"
-    read today: "Peržiūrėti Šiandienos Skaitymą"
     current progress html: "Diena <b>%{day}</b> iš <b>%{total_days}</b>"
     are you behind: "Šiek tiek atsiliekate?"
     do you want to reset: "Norite perdarymo?"
