--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -1,4 +1,7 @@
 pt-PT:
+  time:
+    formats:
+      votd: "%-d %B %Y"
   social:
     intro page:
       main heading: "Conversa & Descoberta"
@@ -21,10 +24,10 @@ pt-PT:
         comments:
           first:
             text: "Precisava mesmo de ouvir isso hoje, obrigado. Devíamos pôr a conversa em dia!"
-            time: "perto de 3 horas atrás"
+            time: "cerca de 3 horas atrás"
           second:
             text: "Amém, eu também. Estou a enviar-te um email agora mesmo."
-            time: "perto de 27 minutos atrás"
+            time: "cerca de 27 minutos atrás"
           field placeholder: "Escreva um comentário..."
     widget:
       timeline: "Cronologia"
@@ -187,8 +190,19 @@ pt-PT:
     lower: "ou"
     upper: "OU"
   moments:
+    scripture unavailable: "Escritura indisponível"
+    could not load: "Não foi possível carregar"
+    could not load verse: "Não foi possível carregar o versículo"
+    showing related: "A mostrar momentos relacionados"
+    return to: "Voltar para"
+    time past: "Há %{ago} dias "
+    user likes this: "%{last_liker_link} gosta disto"
+    likes count more: "mais %{likes_count} pessoas"
+    likes count 2 more: "mais %{likes_count} pessoas"
+    likes count 3 or more: "mais %{likes_count} pessoas"
+    users like this: "%{last_liker_link} e %{more_link} gostam disto"
     vod:
-      title: "Versículo do Dia"
+      title: "Versículo do dia"
     friendship:
       now friends: "Você é agora amigo/a de"
     cta:
@@ -196,7 +210,7 @@ pt-PT:
       profile update button: "Atualize o seu perfil"
       sharing text: "Partilhe versículos nas redes sociais"
       sharing button: "Permitir partilha"
-      friends text: "Veja os momentos na Bíblia dos seus amigos."
+      friends text: "Veja os momentos dos seus amigos na Bíblia."
       friends button: "Encontre amigos"
     action:
       go to scripture: "Ir para as Escrituras"
@@ -222,16 +236,16 @@ pt-PT:
     title: "Notificações"
     none: "Ainda não tem nenhuma notificação"
     no new: "Sem novas notificações"
-    view all: "Ver todas as Notificações"
+    view all: "Ver todas as notificações"
   likes:
-    create success: "O seu \"Gosto\" foi gravado"
+    create success: "O seu \"Gosto\" foi gravado com sucesso!"
     create failure: "Não foi possível gravar o seu \"gosto\""
     destroy success: "\"Gosto\" eliminado"
     destroy failure: "Não foi possível eliminar o seu \"gosto\""
   comments:
     view all N: "Ver todos os %{count} comentários"
     post comment: "Adicionar comentário"
-    create success: "Sucesso! O seu comentário foi publicado."
+    create success: "O seu comentário foi publicado com sucesso. "
     create failure: "O comentário não pôde ser publicado"
     destroy success: "Comentário eliminado"
     destroy failure: "Não foi possível eliminar o comentário"
@@ -244,7 +258,7 @@ pt-PT:
     blank slate:
       heading: "Atualmente não são amigos"
       description: "Tem que ser amigo desta pessoa para poder ver os seus amigos."
-    limit notice: "Podes ter no máximo 150 amizades"
+    limit notice: "Pode ter no máximo 150 amizades"
     limit description: "Limitar as suas amizades na App da Bíblia às pessoas que conhece bem cria um ambiente para conversas honestas e partilha de descobertas com amigos de confiança."
   friendships:
     find friends title: "Encontre amigos"
@@ -267,15 +281,15 @@ pt-PT:
     status:
       pending: "Solicitação pendente"
       friends: "Amigos"
-    user wants friendship: "%{user} deseja ser seu amigo"
-    user wants friendship partial: "deseja ser seu amigo"
+    user wants friendship: "%{user} deseja ser seu amigo(a)"
+    user wants friendship partial: "deseja ser seu amigo(a)"
     form:
       remove friend button: "Eliminar amizade"
       remove friend button title: "Eliminar esta pessoa da sua lista de amizades"
       add friend button: "Adicionar amigo"
       add friend button title: "Enviar a %{user} o pedido de amizade"
       accept button: "Aceitar"
-      accept request button: "Aceitar solicitação"
+      accept request button: "Aceitar pedido"
       ignore button: "Ignorar"
       ignore request button: "Ignorar o pedido"
   notes:
@@ -323,10 +337,10 @@ pt-PT:
     cancel: "Cancelar"
     pop out: "Saltar fora"
     none found: "Nenhuma nota encontrada..."
-    create success: "Sucesso! A sua nota foi guardada."
+    create success: "A sua nota foi guardada com sucesso!"
     create failure: "Erro ao gravar a nota"
-    destroy success: "Nota elminada"
-    destroy failure: "Erro ao apagar nota"
+    destroy success: "Nota eliminada"
+    destroy failure: "Erro ao remover a nota"
   ref:
     loading secondary: "A Carregar a Referência na Versão Secundária..."
     clear verses: "Limpar Versículos Selecionados"
@@ -361,6 +375,8 @@ pt-PT:
     last name: "Sobrenome"
     agreement: "Eu concordo com os %{terms_link} do YouVersion ."
     terms and conditions: "termos e condições"
+    email: "Email"
+    mobile: "Telemóvel"
     facebook sign up success: "Fantástico! Autorizou com o Facebook. Escolha um nome de utilizador YouVersion e palavra-passe para continuar."
     register: "Registar-se"
     thanks for registering: "Obrigado por se registar!"
@@ -523,7 +539,7 @@ pt-PT:
       country: "País ou Região"
       timezone: "Fuso Horário"
       language: "Idioma"
-      updated: "Sucesso! Atualizou o seu perfil."
+      updated: "Atualizou o seu perfil com sucesso!"
       error: "Desculpe, houve um erro a atualizar o seu perfil."
       current password: "Palavra-Passe Atual"
       new password: "Nova Palavra-Passe"
@@ -533,17 +549,17 @@ pt-PT:
       picture error: "Desculpe, houve um erro a atualizar a sua imagem."
       picture_empty: "Por favor escolha uma imagem para carregar"
       picture_too_large: "As imagens deverão ter menos de 1 megabyte"
-      transfer_too_slow: "Escolha uma fotografia mais pequena ou encontre uma ligação mais rápida"
+      transfer_too_slow: "Escolha uma fotografia menor ou tente com uma ligação mais rápida"
       picture_invalid_type: "As imagens deverão ser JPG, PNG, ou GIF"
       picture_creation form errors: "O(s) erro(s) seguinte(s) impede(m) que a sua imagem seja atualizada:"
-      updated picture: "Sucesso! Atualizou a sua imagem."
-      updated notifications: "Sucesso! Atualizou as suas definições de notificação."
+      updated picture: "A sua foto foi atualizada com sucesso! Poderá demorar vários minutos até que a sua foto de perfil apareça."
+      updated notifications: "Atualizou as suas definições de notificação com sucesso!"
       notifications token error: "Credencial inválida, por favor autentique-se para editar as suas definições de notificação."
       notification errors: "O(s) erro(s) seguinte(s) impede(m) de atualizar as suas notificações:"
       edit: "Editar"
       bio: "Biografia"
     password:
-      updated: "Sucesso! Atualizou a sua palavra-passe."
+      updated: "Atualizou a sua palavra-passe com sucesso!"
       error: "Desculpe, houve um erro na alteração da sua palavra-passe."
       old was invalid: "Desculpe, tem de introduzir a sua antiga palavra-passe corretamente para poder alterar a palavra-passe."
     notifications:
@@ -557,7 +573,7 @@ pt-PT:
       friendships: "Notifiquem-me sobre pedidos de amizade"
       moments: "Notifiquem-me sobre atividades de amigos"
       comments: "Notifiquem-me sobre comentários à minha atividade"
-      likes: "Notifiquem-me sobre comentários à minha atividade"
+      likes: "Notifiquem-me sobre gostos à minha atividade"
   bookmarks:
     new: "Novo Marcador"
     edit: "Editar"
@@ -568,13 +584,13 @@ pt-PT:
     all: "Todos"
     labels label: "Etiquetas:"
     title: "Marcadores"
-    my labels: "As Minhas Etiquetas"
+    my labels: "As minhas etiquetas"
     not found: "Marcadores dão-lhe um guia de referência rápido para as suas passagens favoritas ou para o último capítulo lido num dos livros da Bíblia. Para adicionar um marcador, selecione um versículo no leitor da Bíblia e depois clique o botão Selecionado no topo do leitor."
     other user not found: "%{username} ainda não guardou nenhum marcador."
     creation form errors: "O(s) seguinte(s) erro(s) não permite(m) a criação do seu marcador:"
-    create success: "Sucesso! O seu marcador foi guardado."
+    create success: "O seu marcador foi guardado com sucesso."
     destroy success: "Marcador removido"
-    destroy failure: "Erro ao remover marcador"
+    destroy failure: "Erro ao eliminar marcador"
     update success: "Marcador atualizado"
     labels placeholder: "Separe as etiquetas com vírgulas."
     save: "Guardar Marcador"
@@ -588,7 +604,7 @@ pt-PT:
     version field: "Versão:"
     none user: "%{username} não tem marcadores"
     blank slate:
-      heading: "Marque versículos com significado"
+      heading: "Marque versículos com significado para si"
       description: "Enquanto lê a Bíblia, selecione um versículo e crie um marcador. Volte aqui para ver, editar, ou apagar o seu marcador."
     form:
       title field: "Título:"
@@ -596,21 +612,24 @@ pt-PT:
       labels field: "Etiquetas (separadas por vírgula):"
       highlight field: "Destaque: (opcional)"
       colors field: "Cor:"
-      update button: "Atualizar Marcador"
-      save button: "Guardar Marcador"
+      update button: "Atualizar marcador"
+      save button: "Guardar marcador"
   badges:
     earned a badge: "Ganhou uma Medalha"
     user badges: "Medalhas de %{user}"
-    earned date: "Ganha por %{username} há %{ago}"
+    earned date: "Ganha por %{username} há %{ago} atrás"
     none me: "Ainda não ganhou nenhuma medalha."
     none user: "%{username} ainda não ganhou qualquer medalha."
   plans:
     widget:
-      my plans: "Os Meus Planos"
+      my plans: "Os meus planos"
       start reading: "Começar a ler"
-      view my plans: "Ver os Meus Planos"
-      featured plans: "Planos em Destaque"
-      view all plans: "Ver Todos os Planos"
+      view my plans: "Ver os meus planos"
+      featured plans: "Planos em destaque"
+      view all plans: "Ver todos os planos"
+      reading: "pessoa a ler"
+      readings: "pessoas a ler"
+      readings 5 or more: "pessoas a ler"
     settings: "Definições"
     privacy:
       visible to friends?: "Gostaria que a sua atividade com este plano fosse visível para os seus amigos?"
@@ -656,7 +675,7 @@ pt-PT:
     done reading: "Concluído"
     no verses: "Não há versículos para hoje"
     no content: "O seu plano não tem leitura das escrituras agendada para o dia de hoje, por isso foi marcado como completo."
-    read today: "Ver a Leitura de Hoje"
+    read today: "Leitura do dia"
     devotional: "Devocional"
     completion status _ below percentage: "Completo"
     current progress html: "Dia <b>%{day}</b> de <b>%{total_days}</b>"
@@ -694,15 +713,15 @@ pt-PT:
     email edit: "Editar"
     unsubscribe successful: "Já não subscreve este plano."
     already subscribed: "Já tem este plano subscrito!"
-    partner added successful: "Sucesso! %{username} foi adicionado à responsabilização do plano."
+    partner added successful: "%{username} foi adicionado à responsabilização do plano com sucesso!"
     partner removed successful: "%{username} foi removido da responsabilização do plano."
-    make public successful: "Sucesso! O seu plano tornou-se público."
+    make public successful: "O seu plano tornou-se público com sucesso!"
     make private successful: "O seu plano é agora privado."
     reminder on successful: "Sucesso! Irão ser enviados lembretes diários por email."
     reminder off successful: "Lembretes diários deixarão de ser enviados por email."
-    email delivery on successful: "Sucesso! Leituras diárias irão ser enviadas por email."
+    email delivery on successful: "Sucesso! As leituras diárias irão ser enviadas por email."
     email delivery off successful: "Leituras diárias deixarão de ser enviadas por email."
-    email delivery updated successful: "Sucesso! As definições de entrega por email foram atualizadas."
+    email delivery updated successful: "As definições de entrega por email foram atualizadas com sucesso!"
     report on successful: "Sucesso! Relatórios de responsabilização semanais irão ser enviados."
     report off successful: "Relatórios de responsabilização semanais deixarão de ser enviados."
     catch up successful: "Sucesso! Tem a sua leitura em dia."
@@ -757,15 +776,15 @@ pt-PT:
     none: "Desculpe, mas o áudio não está disponível nesta versão."
     chapter only: "Desculpe, não está disponível áudio para os versículos. Verifique no leitor a opção áudio do capítulo."
     close player menu: "Fechar"
-    publisher website: "Website do Editor"
+    publisher website: "Website do editor"
   highlights:
     title: "Destaques"
     blank slate:
-      heading: "Destaque versículos com significado"
+      heading: "Destaque versículos com significado para si"
       description: "Enquanto lê a Bíblia, selecione um versículo e crie um destaque. Volte aqui para ver, editar, ou apagar o seu destaque."
     none user: "%{username} não tem destaques"
     choose color: "Escolha a Cor"
-    create success: "Sucesso! O seu destaque foi guardado."
+    create success: "O seu destaque foi guardado com sucesso"
     create failure: "Erro ao guardar destaque"
     destroy success: "Destaque apagado"
     destroy failure: "Erro ao apagar destaque"
@@ -818,7 +837,7 @@ pt-PT:
     line 3: "vai consigo para todo o lado"
     download: "Descarregue Agora"
   about page:
-    relevancy: "Relevãncia"
+    relevancy: "Relevância"
     relevancy copy: "Nas gerações anteriores, o acesso que as pessoas tinham à Bíblia era muito limitado. Hoje isso já não acontece. Todavia, muitas pessoas que têm acesso à Bíblia acham que a sua mensagem não diz respeito às suas vidas. Ao mesmo tempo, existem outras pessoas que acreditam que existe uma ligação entre a Bíblia e as suas experiências diárias."
     information revolution: "Revolução da Informação"
     information revolution copy: "Na última década a Internet trouxe uma revolução que habilitou as pessoas com novas capacidades como nunca antes. Com a possibilidade de partilhar, contribuir, criar, difundir e comunicar, é fácil expressar quem nós somos e no que acreditamos com o resto do mundo."
@@ -828,7 +847,7 @@ pt-PT:
     partners text: "Sem os generosos parceiros editores da Bíblia, o YouVersion simplesmente não poderia disponibilizar à nossa comunidade tantas Bíblias. Muitos de vós questionaram como poderiam agradecer a estes vitais apoiantes da missão YouVersion. Pode saber mais sobre eles, os seus ministérios e formas como os poderão apoiar através dos links presentes em baixo."
     translation title: "Nossas Equipes de Tradução"
     learn more: "Saiba mais"
-    bible dot com title: "O que aconteceu ao antigo Bible.com?"
+    bible dot com title: "O que aconteceu ao antigo website Bible.com?"
     bible dot com copy: "Se procura por conteúdo do Ministério Christ Unlimited de Bud e Betty Miller, ou o antigo website Bible.com, por favor visite o seu novo website em <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Área de Imprensa"
@@ -982,8 +1001,13 @@ pt-PT:
         tagline: "Vamos fazer história juntos."
         button: "Partilhe a App da Bíblia"
   ui:
+    characters remaining: "caracteres restantes"
+    yes button: "Sim"
+    no button: "Não"
+    loading indicator text: "A carregar..."
+    loading: "A carregar"
     pagination:
-      next page: "Próxima Página"
-      previous page: "Página Anterior"
+      next page: "Próxima página"
+      previous page: "Página anterior"
     datetime:
       just now: "agora"
