--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -1,5 +1,23 @@
 ta:
   social:
+    intro page:
+      main heading: "உரையாடல் & கண்டறிதல்"
+      main description: "நம்பகமான நண்பர்களுடன் பைபிளை ஆராய ஒரு புதிய வழி"
+      moment:
+        user aaron: "ஆரோன் ச்டீல் "
+        user andy: "அண்டி நைட் "
+        timestamp: "5 நாட்களுக்கு முன்பு "
+        title: "சங்கீதம் 31:7 புத்தககுறியிடப்பட்டது"
+        verse: "உமது கிருபையிலே களிகூர்ந்து மகிழுவேன்; நீர் என் உபத்திரவத்தைப் பார்த்து, என் ஆத்தும வியாகுலங்களை அறிந்திருக்கிறீர்."
+        reference: "சங்கீதம் 31:7"
+        discover:
+          copy: "உங்கள் நண்பர்களுடன் இணைந்து அவர்கள் முக்கியபடுத்துபவைகள், புத்தகக்குறிகள் மற்றும் குறிப்புகளை கண்டறிந்து கற்றுக்கொள்ளுங்கள் "
+          button: "நான் எங்கே தொடங்க முடியும்?"
+        share:
+          copy: "வேதாகமத்தை குறித்தான உங்கள் கருத்துக்களை பகிர்ந்து கொள்ளுக "
+          button: "புதிய நண்பர்களை கண்டுபிடித்து உங்கள் பயணத்தை தொடங்குங்கள் "
+    widget:
+      timeline: "காலக்கோடு"
     share: "பகிர்"
     my connections: "இணைக்கப்பட்டுள்ள கணக்குகள்"
     connected as: "நீங்கள் %{connection} -யுடன் %{username} என இணைக்கப்பட்டுள்ளீர்கள்."
@@ -33,6 +51,8 @@ ta:
     users username or password invalid: "நீங்கள் அளித்த பயனர் பெயரோ  அல்லது கடவுச்சொல்லோ தவறானது."
     users username required: "நீங்கள் ஒரு பயனர் பெயரை உள்ளிட வேண்டும்."
   meta:
+    kids_app:
+      title: "சிறுவர்களுக்கானா வேதாகம ஆப்ப "
     100million:
       title: "இது தொடங்குவது 100 மில்லியனில் "
       description: "ஏறக்குறைய 10 கோடி முறை பைபிள் App நிறுவப்பட்டுள்ளது - இது ஒரு வியத்தகு மைல்கல்! ஆனால் நாம் இப்பொழுதே ஆரம்பித்துள்ளோம். இன்றே இலவச பைபிள் App ஐ பதிவிறக்கம் செய்யுங்கள் - அதன்பின் அதை உங்கள் நண்பர்களுடன் பகிர்ந்து கொள்ளுங்கள். நாம் இணைந்து வரலாறு படைப்போம்."
@@ -60,10 +80,11 @@ ta:
   new note: "ஒரு குறிப்பை உருவாக்குக"
   share success: "உங்கள் செய்தி பகிர்ந்து கொள்ள பட்டிருக்கிறது."
   share error: "மன்னிக்கவும், உங்கள் செய்தியை பகிர்ந்து கொள்வதில் பிழை ஏற்பட்டிருக்கிறது. மீண்டும் முயற்சிக்கவும்."
+  google plus: "Google+"
   connect to: "உங்கள் %{connection} கணக்கினோடு  இணையுங்கள்"
   deleted connection: "%{connection}-னோடுள்ள உங்கள் இணைப்பு வெற்றிகரமாக துண்டிக்கப்பட்டது  "
   deleted connection error: "மன்னிக்கவும், %{connection}-னோடுள்ள உங்கள் இணைப்பை துண்டிப்பதில் பிழை ஏற்பட்டுள்ளது,"
-  connection marketing: " நண்பர்களோடு  YouVersion இன்னும் நன்றாக இருக்கும்.  உங்கள் YouVersion கணக்கை, மற்ற சமூக வளைத்தளங்களுடன் இணைப்பதின் மூலம் உங்கள் நண்பர்களை  YouVersion ல் உடனே கண்டு பிடிக்கலாம். மேலும், உங்கள் கணக்குகளை இணைப்பது, விசயங்களை சில கிளிக்குகளில் பகிர்ந்து கொள்ள வழி வகுக்கிறது.  நாங்கள் உஙளுடைய ஒப்புதல் இல்லாமல் எதையும் பதிவு செய்ய மாட்டோம்.   "
+  connection marketing: " நண்பர்களோடு  YouVersion இன்னும் நன்றாக இருக்கும்.  உங்கள் YouVersion அக்கௌண்டை , மற்ற சமூக வளைத்தளங்களுடன் இணைப்பதின் மூலம் உங்கள் நண்பர்களை  YouVersion ல் உடனே கண்டு பிடிக்கலாம். மேலும், உங்கள் அக்கௌண்டுகளை  இணைபதின் மூலம் , விசயங்களை சில கிளிக்குகளில் பகிர்ந்து கொள்ள வழி வகுக்கிறது.  நாங்கள் உஙளுடைய ஒப்புதல் இல்லாமல் எதையும் பதிவு செய்ய மாட்டோம்.   "
   next step connections: "அடுத்தது: உங்கள் கணக்குகளை இணைத்து உங்கள் நண்பர்களை கண்டு பிடியுங்கள்"
   no notes found: "%{username} எந்த குறிப்புகளும்  பெற்றிருக்கவில்லை."
   no recent activity: "%{username} சமீபத்திய நடவடிக்கை ஒன்றும் பெற்றிருக்கவில்லை."
@@ -115,13 +136,14 @@ ta:
   find friends: "நண்பர்களை தேடு"
   search placeholder: "தேடு..."
   search: "தேடு"
+  more: "மேலும்"
   book: "புத்தகம்"
   filter book: "புத்தகங்களை வடிகட்டு"
   save: "சேமி"
   cancel: "ரத்துசெய்"
   try the beta: "Beta பதிப்பினை முயற்சிக்கவும்"
   welcome to the beta: "புதிய YouVersion.com க்கு வரவேற்கிறோம்!"
-  highlight: "சுட்டிகாட்டுதல்"
+  highlight: "வசணம் சுட்டிக்காட்ட  "
   comment: "புதிய கருத்துரை"
   note: "புதிய குறிப்பு"
   selected: "தேர்ந்தெடுக்கப்பட்டது"
@@ -135,6 +157,7 @@ ta:
   last page: "கடைசி பக்கம்"
   invalid username or password: "தவறான பயனாளர் பெயர் அல்லது கடவுச்சொல்"
   show all bookmarks: "அனைத்து %{total} புத்தக அடையாள குறிகளையும் பார்க்கவும்"
+  show all notes: "அனைத்து குறிப்புகளையும் காண்க"
   recent bookmarks: "சமீபத்திய புத்தக அடையாள குறி"
   percentage display: "%{number}%"
   myself: "நான்"
@@ -149,6 +172,7 @@ ta:
     action:
       like: "விரும்பு"
       share: "பகிர்"
+      comment: "கருத்து"
       edit: "திருத்து"
   friendships:
     status:
@@ -162,6 +186,7 @@ ta:
     status:
       private: "தனிமறைவானது "
       public: "பொதுவானது "
+      friends: "நண்பர்கள் மட்டும்"
       draft: "ஆரம்ப வரைபு"
     list title: "குறிப்புகள்"
     loading community: "சமூக குறிப்புகள் ஏற்றபட்டு கொண்டிருக்கிறது......"
@@ -223,6 +248,8 @@ ta:
     user name: "பயனாளர் பெயர்"
     agreement: "நான் YouVersion விதிமுறைகளை ஒப்புக்கொள்கிறேன் %{terms_link}."
     terms and conditions: "விதிமுறைகள் மற்றும் நிபந்தனைகள்"
+    email: "மின்னஞ்சல்"
+    mobile: "மொபைல்"
     facebook sign up success: "நல்லது! நீங்கள் Facebook மூலம் அனுமதி அளித்திருக்கிறீர்கள். மேலும் தொடர ஒரு YouVersion பயனாளர் பெயர் மற்றும்  கடவுச்சொல்லை தேர்ந்தெடுக்கவும்.  "
     register: "பதிவு செய்க"
     thanks for registering: "பதிவு செய்ததற்கு நன்றி!"
@@ -250,6 +277,7 @@ ta:
     edit account_existence: "கணக்கை நீக்கி விடவும்"
     delete account button: "எனது YouVersion கணக்கை நீக்கி விடவும்"
     no devices: "சாதனங்கள் ஒன்றும் உங்கள் YouVersion Account  -டுடன் இணைக்க பட்டிருக்கவில்லை. "
+    no devices download copy: "ஆன்லைன் பைபிளின் அடிப்படையில், YouVersion.com , பைபிள் பயன்பாடு எந்த மொபைல் சாதனத்திலும் நிறுவ கூடிய ஒரு இலவச மொபைல் பைபிள் ஆகும். பைபிளை வாசிக்கவும், தங்கள் சமூக வலைப்பின்னல்களில் வேத வசனங்களை பகிர்ந்து கொள்ளவும், அவர்களுக்கு பிடித்த பத்திகளை புக்மார்க் செய்து கொள்ளவும் மேலும் பலவற்றை செய்ய இந்த பைபிள் பயன்பாடு, பயனர்களை அனுமதிக்கிறது.இவை எல்லாம் அவர்களில் அதிகமாகி வரும் மொபைல் வாழ்க்கை முறையோடு ஒத்து போகும் ஒரு வடிவத்தில் உள்ளது.உங்கள் மொபைல் சாதனத்தில் இந்த பைபிள் பயன்பாட்டினை பதிவிறக்கம் செய்யவும் மற்றும் உங்கள் கணக்கை இணைக்க <a href='https://www.bible.com/app'>bible.com/app</a> வருக."
     yes delete: "ஆம், எனது கணக்கை நீக்கி விடவும்"
     account delete success: "உங்கள் YouVersion கணக்கு நீக்கப்பட்டுவிட்டது. நீங்கள் தொடர்ந்து பைபிளோடு ஊடாட அர்த்தமுள்ள வழிகளை கண்டுபிடிப்பீர்கள் என்று நம்புகிறோம். நீங்கள் முன்னோக்கி செல்லும்போது இந்த பயன்பாடுகளில் சில பயனுள்ளதாக இருக்கலாம்.<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "நீங்கள் உங்கள் கணக்கை நீக்கினீர்கள் என்றால், YouVersion.com மற்றும் பைபிள் பயன்பாடு இவைக்கு உள்ளில் உள்ள உங்களின் எல்லா தகவல், வரலாறு, மற்றும் தனிப்பயனாக்கம் (இந்த குறிப்புகள், புக்மார்க்குகள், சிறப்பு, போன்றவை)   அனைத்தும் நிரந்தரமாக அழிக்கப்பட்டுவிடும். உங்களாலோ அல்லது எங்கள் குழுவினாலோ இந்த நடவடிக்கையை மாற்ற இயலாது. நீங்கள் உறுதியாகவே  இதை செய்ய விரும்புகிறீர்கள் என்றால், கீழே செல்லுங்கள்."
@@ -263,6 +291,7 @@ ta:
     my badges: "எனது பேட்ஜ்கள்"
     revised date: "கடைசியாக %{date} அன்று திருத்தப்பட்டது "
     update email copy: "ஒரு புதிய மின்னஞ்சல் முகவரியை உள்ளிட்டு விட்டு  Update Email-இல் கிளிக் செய்யவும். உங்களுடைய புதிய மின்னஞ்சல் முகவரியை உறுதிப்படுத்தும் ஒரு இணைப்பை நாங்கள் உங்களுக்கு அனுப்புவோம்."
+    edit email: "மின்னஞ்சல் முகவரியை புதுப்பிக்கவும் "
     update email check: "உங்கள் புதிய மின்னஞ்சல் முகவரியை உறுதிப்படுத்த உங்கள் மின்னஞ்சலை சரிபார்த்து இணைப்பை கிளிக் செய்க."
     confirm update email success: "நன்றி! உங்கள் மின்னஞ்சல் முகவரியை புதுப்பித்து விட்டீர்கள்."
     confirm update email error: "மன்னிக்கவும், உங்கள் மின்னஞ்சல் முகவரி மாற்றம் பூர்த்தி செய்வதில் ஒரு பிரச்சனை உள்ளது."
@@ -388,7 +417,7 @@ ta:
       picture_too_large: "படம்  1MB க்கு குறைவாக இருக்க வேண்டும்"
       picture_invalid_type: "படம் JPG, PNG, or GIF ஆக இருக்க வேண்டும்"
       picture_creation form errors: "பின்வரும் பிழை (கள்) உங்கள் படத்தை மேம்படுத்துவதை தடுத்து விட்டது:"
-      updated picture: "வெற்றி! உங்களின் படத்தை நீங்கள் புதுப்பித்து விட்டீர்கள்."
+      updated picture: "வெற்றி! நீங்கள் உங்கள் படத்தை புதுப்பித்துள்ளீர்கள். இது உங்கள் சின்னமாக பல நிமிடங்கள் வரை ஆகலாம்."
       updated notifications: "வெற்றி! உங்களுடைய கடவுசொல்லை நீங்கள் புதுப்பித்து இருக்கிறீர்கள்."
       notifications token error: "தவறான டோக்கன், உங்கள் அறிவிப்பு அமைவுகளை   திருத்த உள்நுழைக."
       notification errors: "உங்கள் அறிவிப்புகளை மேம்படுத்துவதை பின்வரும் பிழை (கள்)  தடுத்தது:"
@@ -445,6 +474,9 @@ ta:
     widget:
       my plans: "என்னுடைய திட்டங்கள்"
       start reading: "வாசிப்பை ஆரம்பிக்கவும் "
+      reading: "வாசிப்பு"
+      readings: "வாசிப்புகள்"
+      readings 5 or more: "வாசிப்புகள்"
     settings: "அமைப்புகள்"
     privacy:
       private: "தனிமறைவானது "
@@ -489,7 +521,7 @@ ta:
     done reading: "செய்து முடிக்கப்பட்டது"
     no verses: "இன்றைக்கு எந்த வசனங்களும் இல்லை"
     no content: "இந்த நாளில்  எந்த திட்டமிட்ட வசன வாசிப்பும் உங்கள் திட்டம் பெற்றிருக்கவில்லை என்பதால் அது நிறைவு செய்யப்பட்டதாக குறிக்கப்பட்டுள்ளது."
-    read today: "இன்றைய வாசிப்பை பார்க்கவும்"
+    read today: "இந்த நாள் வாசிப்பு"
     devotional: "பக்திக்குரியவை"
     completion status _ below percentage: "முடிவடைந்தது"
     current progress html: " நாள் <b>%{day}</b> இன் <b>%{total_days}</b>"
@@ -596,6 +628,7 @@ ta:
     delete error: "மன்னிக்கவும், உயர்த்திக்காட்டலை நீக்க முடியாது."
   searching:
     bible: "வேதாகமம்"
+    plans: " வாசிப்பு திட்டங்கள்"
     users: "பயனாளர்கள்"
     notes: "குறிப்புகள்"
     total results: "%{total} பற்றிய முடிவுகள்"
@@ -800,6 +833,8 @@ ta:
         tagline: "நாம் ஒன்றிணைந்து வரலாறு படைப்போம்."
         button: "பைபிள்  App ஐ பகிரவும்"
   ui:
+    yes button: "ஆம்"
+    no button: "இல்லை"
     pagination:
       next page: "அடுத்த பக்கம்"
       previous page: "முந்தின பக்கம்"
