--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,12 +1,15 @@
 zh-CN:
+  time:
+    formats:
+      votd: " %Y/%B/%-d"
   social:
     intro page:
-      main heading: "会话 & 发现"
+      main heading: "会话 与 发现"
       main description: "与可信赖的朋友一起查考圣经，一种全新的方式"
       moment:
-        user aaron: "李小明"
-        user andy: "刘小红"
-        timestamp: "五天前"
+        user aaron: "亚伦"
+        user andy: "安迪"
+        timestamp: "5 天前"
         title: "给诗篇 31:7 加了书签"
         verse: "我要为你的慈爱高兴欢喜，因为你见过我的困苦，知道我心中的艰难。"
         reference: "诗篇 31:7"
@@ -17,11 +20,11 @@ zh-CN:
           copy: "真诚地分享关于经文的见解。"
           button: "从找些朋友开始。"
         likes:
-          info: "有四个以上的人喜欢这个"
+          info: "有4 个以上的人喜欢这个"
         comments:
           first:
             text: "这正是我今天所需要听到的，谢谢。让我们找机会再聊！"
-            time: "大约三小时前"
+            time: "大约 3 小时前"
           second:
             text: "阿们！我也是。现在给您发邮件。"
             time: "大约 27 分钟前"
@@ -70,6 +73,7 @@ zh-CN:
   meta:
     kids_app:
       title: "儿童圣经软件"
+      description: "儿童圣经软件在11月28日，也就是感恩节当日推出！ 在 iOS 和安卓平台上呈献互动式圣经故事的免费软件。请在 bible.com/kids 预览。"
     100million:
       title: "从一亿开始"
       description: "圣经软件的安装量几乎达到1亿次，这真是一个不可思议的里程碑！但是我们才刚刚开始。下载免费的圣经软件，然后与朋友们分享这个软件，让我们一起开创历史。"
@@ -111,7 +115,7 @@ zh-CN:
   bookmark: "书签"
   earned badge date: "%{username} 在 %{ago} 之前获得了徽章"
   badges title: "徽章"
-  currently selected: "已选择："
+  currently selected: "目前选定："
   read reference: "阅读 %{reference}"
   compare all versions: "比较所有版本"
   link will be added: "将被添加"
@@ -163,7 +167,7 @@ zh-CN:
   highlight: "高亮显示经文"
   comment: "新评论"
   note: "新笔记"
-  selected: "已选的"
+  selected: "选定"
   chapter: "章节"
   bible: "圣经"
   notes title: "笔记"
@@ -177,15 +181,26 @@ zh-CN:
   show all notes: "查看所有笔记"
   recent bookmarks: "最近的书签"
   percentage display: "%{number}%"
-  myself: "本人"
+  myself: "我"
   none found: "我们没有找到任何符合您的分类检索的内容，请扩大搜索范围。"
   paginated items shown: "%{total_available}中的 %{first_shown}&ndash;%{last_shown}"
   160 character limit: "少于160个字"
-  recent versions: "最近使用的圣经版本"
+  recent versions: "最近使用的圣经译本"
   or:
     lower: "或"
     upper: "或"
   moments:
+    scripture unavailable: "经文找不着。"
+    could not load: "不能载入"
+    could not load verse: "不能载入经文"
+    showing related: "显示相关动态"
+    return to: "返回到"
+    time past: "%{ago} 前"
+    user likes this: "%{last_liker_link} 赞了这个"
+    likes count more: "%{likes_count} 以上"
+    likes count 2 more: "%{likes_count} 以上"
+    likes count 3 or more: "%{likes_count} 以上"
+    users like this: "%{last_liker_link} 和 %{more_link} 赞了这个"
     vod:
       title: "今日经文"
     friendship:
@@ -193,7 +208,7 @@ zh-CN:
     cta:
       profile update text: "帮助您的朋友找到您。"
       profile update button: "更新您的档案"
-      sharing text: "通过社交网络分享经节"
+      sharing text: "通过社交网络分享经文"
       sharing button: "启动分享功能"
       friends text: "看看您的朋友在圣经软件里的动态。"
       friends button: "寻找朋友"
@@ -207,7 +222,7 @@ zh-CN:
       share: "分享"
       share title: "与朋友或家人分享这个"
       comment: "评论"
-      comment title: "查看所有评语"
+      comment title: "查看所有评论"
       edit: "编辑"
       edit highlight title: "编辑此高亮显示"
       edit bookmark title: "编辑此书签"
@@ -223,15 +238,15 @@ zh-CN:
     no new: "没有新的通知"
     view all: "查看所有通知"
   likes:
-    create success: "成了！您的点赞已经保存"
+    create success: "成了！您的赞已经保存"
     create failure: "您的赞不能被保存"
     destroy success: "赞已被删除"
     destroy failure: "您的赞不能被删除"
   comments:
     view all N: "查看所有 %{count} 评论"
-    post comment: "张贴评语"
+    post comment: "发布评论"
     create success: "成了！您的评论已经保存。"
-    create failure: "不能张贴评语"
+    create failure: "不能发布评论"
     destroy success: "评论已被删除"
     destroy failure: "评论不能被删除"
     form:
@@ -243,22 +258,22 @@ zh-CN:
     blank slate:
       heading: "现在不是朋友"
       description: "您必须和这个人成为朋友才能看到他的朋友。"
-    limit notice: "您可以有多至 150 位朋友"
+    limit notice: "您最多可以有 150 位朋友"
     limit description: "将圣经软件上的朋友关系限定在熟悉的人之间，这有助于创造一个坦诚对话和彼此信任的氛围。"
   friendships:
     find friends title: "寻找朋友"
     search by name: "按姓名搜索"
-    search button: "去"
+    search button: "开始"
     widget:
       find friends title: "寻找朋友"
       search by name: "按姓名搜索"
       search button: "去"
-    offer success: "朋友请求以发送"
-    offer failure: "发送朋友请求时出错误"
+    offer success: "朋友请求已发送"
+    offer failure: "发送朋友请求时出错"
     create success: "成了！你们现在是朋友了。"
-    create failure: "建立友情连接时出错误"
+    create failure: "建立友情连接时出错"
     destroy success: "邀请被拒绝"
-    destroy failure: "推拒请求时出错误"
+    destroy failure: "推拒请求时出错"
     requests title: "朋友请求"
     requests view all: "查看所有朋友请求"
     requests none: "您没有任何朋友请求"
@@ -285,25 +300,25 @@ zh-CN:
     form:
       title field: "标题："
       content field: "内容："
-      highlight field: "高亮显示：（可选的）"
-      reference field: "经节："
+      highlight field: "高亮显示：（非必选）"
+      reference field: "参考经文："
       status field: "状态："
       save button: "保存"
     status:
       private: "不公开"
       public: "公开"
-      friends: "朋友而已"
+      friends: "仅朋友"
       draft: "草稿"
     list title: "笔记"
     loading community: "载入社区评论"
-    no community notes: "未找到任何有参考经文的社区笔记。要创建笔记，请在圣经阅读器中选择一个经节，然后在顶部点击【选中的】按钮。"
+    no community notes: "未找到任何有参考经文的社区笔记。要创建笔记，请在圣经阅读器中选择一个经节，然后在顶部点击【选定】按钮。"
     public: "公开"
-    private: "不公开"
+    private: "保密"
     is private: "您想要访问的笔记是保密的。"
     draft: "草稿"
     friends: "朋友"
     creation form errors: "以下错误使您不能创建笔记："
-    reference field: "经节："
+    reference field: "参考经文："
     version field: "版本："
     title field: "标题："
     content field: "内容："
@@ -317,33 +332,33 @@ zh-CN:
     edit: "编辑"
     delete: "删除这篇笔记"
     confirm delete: "是的，我确定"
-    write new: "记新笔记"
+    write new: "写新笔记"
     not found: "YouVersion 允许你通过视频、音频、图象、文字和链接把圣经中的一节或多节经文和其他网站联系起来。当你灵修时，你可以通过这种方式与YouVersion 社区分享你所学所想。现在就可以在圣经阅读器中选择经文并添加笔记。就这么简单。"
     cancel: "取消"
     pop out: "弹出"
     none found: "没有找到笔记"
     create success: "成了！您的笔记已经保存。"
-    create failure: "保存笔记错误"
+    create failure: "保存笔记出错"
     destroy success: "笔记已删除"
-    destroy failure: "删除笔记是出错误"
+    destroy failure: "删除笔记时出错"
   ref:
-    loading secondary: "载入第二圣经版本中的经节..."
-    clear verses: "清除选中的经节"
+    loading secondary: "载入第二圣经译本中的经节..."
+    clear verses: "清除选定的经节"
     choose book and chapter: "选择书卷＋章节"
-    choose version: "选择版本"
-    choose second version: "选择第二个版本"
+    choose version: "选择译本"
+    choose second version: "选择第二个译本"
     share: "分享"
     share now: "立即分享"
-    selected: "选中的"
+    selected: "选定"
     preferences: "偏好"
     listen: "听"
     parallel: "平行"
     full screen: "全屏"
     about the version: "关于  %{version}"
     settings: "阅读器设置"
-    invalid chapter title: "关于这个版本"
-    invalid chapter text: "所选择的章节不在目前的圣经版本中。"
-    invalid secondary chapter text: "在您第二喜欢的圣经版本中，这个章节不存在。"
+    invalid chapter title: "关于这个译本"
+    invalid chapter text: "所选择的章节不在目前的圣经译本中。"
+    invalid secondary chapter text: "这个章节不存在于您的第二选择译本里。"
     no secondary version title: "关于平行对照阅读"
     no secondary version text: "%{language_name} 只有一个译本可用，所以不能为您提供该语言的第二种译本。请选择第二个译本进行平行对照阅读。"
     select another chapter: "选择另外的章节"
@@ -360,6 +375,8 @@ zh-CN:
     last name: "姓"
     agreement: "我同意 YouVersion 的规定和条例 %{terms_link}.。"
     terms and conditions: "规定和条款"
+    email: "电子邮件"
+    mobile: "移动设备"
     facebook sign up success: "恭喜！您已通过 Facebook 授权。请输入您的用户名和密码并继续。"
     register: "注册"
     thanks for registering: "感谢注册！"
@@ -375,7 +392,7 @@ zh-CN:
     my profile: "我的个人资料"
     edit profile: "编辑个人资料"
     update profile: "更新个人资料"
-    go to your profile: "去您的个人档案"
+    go to your profile: "访问您的个人档案"
     other user profile: "%{username} 的个人档案"
     my password: "更改密码"
     edit password: "更改密码"
@@ -388,7 +405,7 @@ zh-CN:
     edit account_existence: "删除账户"
     delete account button: "删除我的 YouVersion 账户"
     no devices: "没有设备连接到您的YouVersion 账户。"
-    no devices download copy: "基于 YouVersion 的在线圣经，YouVersion 圣经软件是一个几乎可以安装在任何移动设备上。YouVersion 圣经软件允许用户阅读圣经、在社交网络上分享经文、给自己喜欢的经文添加书签，还有更多功能——全部都以一种更符合用户日益增长的移动生活的方式进行。请通过您的移动设备访问 <a href='https://www.bible.com/app'>bible.com/app</a> 以便下载 YouVersion 圣经软件并连接到您的账户。"
+    no devices download copy: "基于 YouVersion 的在线圣经，YouVersion 圣经软件是一个几乎可以安装在任何移动设备上应用程序。YouVersion 圣经软件允许用户阅读圣经、在社交网络上分享经文、给自己喜欢的经文添加书签，还有更多功能——全部都以一种更符合用户日益增长的移动生活的方式进行。请通过您的移动设备访问 <a href='https://www.bible.com/app'>bible.com/app</a> 以便下载 YouVersion 圣经软件并连接到您的账户。"
     yes delete: "是的，删除我的账户"
     account delete success: "您的 YouVersion 账户已经成功删除。我们希望您能继续寻找更有意义的与圣经互动的方式。这些软件或许对您有帮助，请前往：<a href= 'https://www.bible.com/free-bible-apps'> http://www.bible.com/free-bible-apps </a>"
     delete account description: "如果您删除账户，您将彻底删除您在 YouVersion 网站和圣经软件上的个人信息、历史记录和专属信息（比如笔记、书签、高亮显示的内容等）。这个行为一旦实施，您或者我们都不能恢复。如果您确定想删除账户，请根据下面提示继续。"
@@ -504,8 +521,8 @@ zh-CN:
       general text: "完整协议。本使用条款构成您和 LifeChurch.tv 之间的完整协议，管辖您对YouVersion 的使用，取代您和 LifeChurch.tv 之间先前关于 YouVersion 的任何协议。您也会受补充条款的约束。<br><br> 法律与诉讼的选择 使用条款以及您和 LifeChurch.tv 之间的关系受美国俄克拉荷马州法律的管辖，但冲突法不适用。您和 LifeChurch.tv 同意服从位于俄克拉荷马州，俄克拉荷马县的法院的属人管辖和专属管辖权。<br><br> 放弃和条款可分割性  LifeChurch.tv 未能行使或履行使用条款的任何权利或条款并不构成对该等权利或条款的弃权。如果有管辖权的法院发现使用条款的任何规定是无效的，各方同意法院应该尽力使该条款中所体现的各方的意图生效，并且使用条款中的其他条款仍然有效。<br><br> 不含生存者取得权，不得转让 您同意您的 LifeChurch.tv 账户是不可以转让的，您 LifeChurch.tv 账户 ID 或您账户里的内容在您死亡后终止。一接到死亡通知，LifeChurch.tv 可以终止您的账户并永久删除其中任何内容。<br><br> 诉讼时效 您理解并同意，无论是否法律或法规有相反的规定，与 YouVersion 有关或产生于 YouVersion 的任何诉讼主张或请求必须在该诉讼主张或请求产生之日起一(1)年内。<br><br> 使用条款中的标题为方便的目的所设，没有法律效力或者合同效力。"
     profile:
       blank slate:
-        heading: "请到别处浏览，这里还没有东西看 (暂时)"
-        description: "开始投入圣经、或与您的朋友交流，这页面将显示您的活动日志。"
+        heading: "请到别处浏览，这里暂时没有东西看"
+        description: "开始读圣经，或与朋友交流，这页面将显示您的活动日志。"
       visit friend: "查看%{friend}的个人档案"
       tab activity: "活动"
       tab friends: "朋友"
@@ -528,13 +545,14 @@ zh-CN:
       new password: "新的密码"
       confirm password: "确认密码"
       avatar file: "选择一个文件作为您的头像"
-      avatar help: "图片可以是JPG，PNG，或GIF格式。您的图片会转换成48x48的缩略图。图片文件的最大尺寸是1MB。"
+      avatar help: "图片可以是JPG，PNG，或GIF格式。您的图片会转换成48x48的缩略图。图片文件大小不能超过1MB。"
       picture error: "很抱歉，在更新您的图片时出错。"
       picture_empty: "请选择一张照片上传"
       picture_too_large: "图片大小必须在1MB以内"
+      transfer_too_slow: "选择较低度分辨率的照片，或者使用更高速度的网络连接。"
       picture_invalid_type: "图片格式应为 JPG、PNG 或 GIF"
       picture_creation form errors: "以下的错误妨碍了您照片的更新："
-      updated picture: "您的头像已成功更新！"
+      updated picture: "已经成功的上传图片！您的头像大概需要几分钟时间得到更新。"
       updated notifications: "您的通知设置已成功更新！"
       notifications token error: "无效的授权鉴定，请登录以便编辑您的通知设置。"
       notification errors: "以下错误导致无法更新您的通知："
@@ -554,8 +572,8 @@ zh-CN:
       update: "更新通知"
       friendships: "有朋友请求时通知我"
       moments: "通知我朋友的活动"
-      comments: "我的活动有评语时通知我"
-      likes: "我的活动有点赞时通知我。"
+      comments: "我的活动有评论时通知我"
+      likes: "我的活动有赞时通知我。"
   bookmarks:
     new: "新书签"
     edit: "编辑"
@@ -567,12 +585,12 @@ zh-CN:
     labels label: "标签："
     title: "书签"
     my labels: "我的标签"
-    not found: "书签能使您快速查询到某一特定书卷中您喜欢的章节或您上次阅读的章节。添加书签的方法是在圣经阅读器中选择一节经文，然后点击阅读器顶部的【选中的】按钮即可。"
+    not found: "书签能使您快速查询到某一特定书卷中您喜欢的章节或您上次阅读的章节。添加书签的方法是在圣经阅读器中选择一节经文，然后点击阅读器顶部的【选定】按钮即可。"
     other user not found: "%{username}还没有保存任何书签。"
     creation form errors: "下列错误妨碍了您创建书签："
     create success: "成了！您的书签已经保存。"
     destroy success: "书签已删除"
-    destroy failure: "删除书签时出错误"
+    destroy failure: "删除书签时出错"
     update success: "书签已更新"
     labels placeholder: "用逗号分开多个标签"
     save: "保存书签"
@@ -586,13 +604,13 @@ zh-CN:
     version field: "版本："
     none user: "%{username} 没有书签"
     blank slate:
-      heading: "标记有意义的经文"
+      heading: "给有意义的经文做书签"
       description: "当阅读圣经时，选择一段经节并以书签标记。回到这里来阅读，编辑或删除您的书签。"
     form:
       title field: "标题："
       reference field: "参考经文："
-      labels field: "标签（用逗号分隔）："
-      highlight field: "高亮显示：（可选的）"
+      labels field: "标签 (用逗号分隔)："
+      highlight field: "高亮显示：（非必要）"
       colors field: "颜色："
       update button: "更新书签"
       save button: "保存书签"
@@ -609,10 +627,13 @@ zh-CN:
       view my plans: "浏览我的计划"
       featured plans: "特色计划"
       view all plans: "浏览全部计划"
+      reading: "个阅读内容"
+      readings: "个阅读内容"
+      readings 5 or more: "个阅读内容"
     settings: "设置"
     privacy:
       visible to friends?: "您是否愿意让朋友看到您的读经计划的活动？"
-      private: "不公开"
+      private: "保密"
       public: "公开"
     title: "读经计划"
     browse by category: "分目录浏览"
@@ -654,7 +675,7 @@ zh-CN:
     done reading: "完成"
     no verses: "今天没有经文"
     no content: "您的读经计划在今天没有安排内容，因此被标记为已完成。"
-    read today: "查看今日阅读内容"
+    read today: "今天的阅读内容"
     devotional: "灵修"
     completion status _ below percentage: "完成"
     current progress html: "<b>%{total_days}</b>天中的第<b>%{day}</b>天"
@@ -680,13 +701,13 @@ zh-CN:
     search members: "搜索"
     email_on: "开启邮件寄送"
     email_off: "关闭邮件寄送"
-    email delivery text: "如果您希望在收件箱中收到每日读经计划内容，请开启邮件寄送。选择您愿意收到邮件的时间和您最适用的圣经版本。"
+    email delivery text: "如果您希望在收件箱中收到每日读经计划内容，请开启邮件寄送。选择您愿意收到邮件的时间和您最适用的圣经译本。"
     email delivery: "电子邮件投递"
     morning: "上午"
     afternoon: "下午"
     evening: "晚上"
     delivery time: "发送的时间："
-    delivery version: "发送的版本："
+    delivery version: "发送的译本："
     add members placeholder: "YouVersion 用户名"
     add member: "添加"
     email edit: "编辑"
@@ -709,14 +730,14 @@ zh-CN:
     day number: "第 %{day} 天"
     which day in plan: "%{total}天中的第%{day}天"
     must start to complete: "请开始这个读经计划来保存已完成的读经！"
-    invalid reference: "很抱歉！此读经计划中的参考经文可能不在您选择的圣经版本中。试着选择一个不同的圣经版本。如果您还是看到这条信息，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
+    invalid reference: "很抱歉！此读经计划中的参考经文可能不在您选定的圣经译本中。试着选择一个不同的圣经译本。如果您还是看到这条信息，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
     sidebar notice: "您在查看读经计划"
     completed notice: "恭喜您完成了读经计划。"
     exit: "退出"
     loading sidebar content: "载入侧栏内容..."
   videos:
     title: "视频"
-    all: "所有录像"
+    all: "所有视频"
     related scripture: "相关经文"
   licenses:
     authorized:
@@ -752,7 +773,7 @@ zh-CN:
     highlight blurb: "看起来您想高亮显示一段经文，太棒了！高亮显示经文可以帮您记忆和整理您喜欢的经节。登录或创建一个账户然后赶紧开始吧！"
     note blurb: "看起来您想就经文写一段笔记，太棒了！读经笔记可以帮您记忆和整理圣经中的真理。登录或创建一个账户然后赶紧开始吧！"
   audio:
-    none: "很抱歉！本圣经版本不提供语音功能。"
+    none: "很抱歉！本圣经译本不提供语音功能。"
     chapter only: "抱歉，经句不支持语音功能。请在阅读器里查看整章圣经的语音功能。"
     close player menu: "关闭"
     publisher website: "出版商网站"
@@ -760,13 +781,13 @@ zh-CN:
     title: "高亮"
     blank slate:
       heading: "高亮显示有意义的经节"
-      description: "当阅读圣经时，选择一段经节并加以醒目显示。回到这里来阅读，编辑或删除您的高亮显示。"
+      description: "当阅读圣经时，选择一段经节并加以高亮显示。回到这里来阅读，编辑或删除您的高亮显示。"
     none user: "%{username} 没有高亮显示"
     choose color: "选择颜色"
     create success: "成了！您的高亮显示已经保存"
-    create failure: "保存高亮显示时出错误"
+    create failure: "保存高亮显示时出错"
     destroy success: "高亮显示已删除"
-    destroy failure: "删除高亮显示时出错误"
+    destroy failure: "删除高亮显示时出错"
     creation error: "抱歉，不能高亮显示。"
     delete error: "抱歉，无法取消高亮显示。"
     form:
@@ -778,11 +799,12 @@ zh-CN:
     notes: "读经笔记"
     total results: "大约有 %{total} 个结果"
     suggestion html: "您是指%{suggestion_link}吗？"
-    all versions: "所有 %{language_name} 版本"
+    all versions: "所有 %{language_name} 译本"
     results for: "搜索结果："
   donate:
     donate now: "现在就捐赠"
     donate now intl: "或者国际捐赠"
+    enter amount: "输入一个数目"
     promo 1: "您每捐出一美元，就能多十个人在他/她们的手机上阅读圣经。"
     promo 2: "有了YouVersion，圣经始终在您身边。观看我们的录像。"
     promo 3: "今年将有50亿人使用手机。现在就捐献！"
@@ -798,7 +820,7 @@ zh-CN:
     card exp date: "过期日期(MM/YY)"
     receipt: "给我电邮收据副本"
     preview: "预览捐赠"
-    header copy: "让我们一起成为历史上最喜爱圣经的一代。您的支持意味着人们可以在前所未有的更多的平台、用更多的语言、在更多的版本中以及更多的国家中，打开神的道（话语）。请填写如下表格进行捐赠。我们将在下一个版面收集您的付款信息。  "
+    header copy: "让我们一起成为历史上最喜爱圣经的一代。您的支持意味着人们可以在前所未有的更多的平台、用更多的语言、在更多的译本中以及更多的国家中，打开神的道（话语）。请填写如下表格进行捐赠。我们将在下一个版面收集您的付款信息。  "
     header confirm copy: "让我们一起成为历史上最喜爱圣经的一代。您的支持意味着人们可以在前所未有的更多的平台、用更多的语言、在更多的版本中以及更多的国家中，打开神的道（话语）。请点击【立即捐助】来进行奉献。"
     donate now button: "现在就捐赠"
     email header: "YouVersion，LifeChurch.tv 的事工，已经收到了您的捐赠。除了信仰上无形的好处，您的捐赠没有任何的产品或者服务作为交换。若有问题请联系 giving@lifechurch.tv。"
@@ -893,7 +915,7 @@ zh-CN:
         now skipped: "从现在开始，本页将被自动跳过。"
       features:
         read heading: "阅读圣经"
-        read description: "您可从<strong>数以百计的圣经版本和语言</strong>中任意选择，并排比较两个版本，甚至可以选择字体和显示尺寸，用你自己喜欢的方式来在线阅读圣经。"
+        read description: "您可从<strong>数以百计的圣经译本和语言</strong>中任意选择，并排比较两个译本，甚至可以选择字体和显示尺寸，用你自己喜欢的方式来在线阅读圣经。"
         study heading: "研读圣经"
         study description: "用您喜爱的颜色来做<strong>高亮显示</strong>，为您喜欢的圣经经节做<strong>标签</strong>，边阅读边做笔记。当您花时间在神的话语上时，其实也在同时建立您与圣经之间的亲密关系。"
         subscribe heading: "订阅计划"
@@ -918,7 +940,7 @@ zh-CN:
       small: "小"
       medium: "中"
       large: "大"
-      highlights: "高亮显示"
+      highlights: "高亮"
       contrast: "对比度"
       'on': "开"
       'off': "关"
@@ -927,23 +949,23 @@ zh-CN:
       cross references: "交叉引用经节"
   app errors:
     404 plans explanation: "您在寻找 <a href='%{plan_path}'>%{title}</a> 读经计划？"
-    404 contact support: "有困难的话，请联系我们的 <a href='%{support_url}'>客服团队</a>."
+    404 contact support: "有困难的话，请联系我们的 <a href='%{support_url}'>支持团队</a>."
     404 explanation: "您可能需要再次从<a href='%{reader_path}'>首页</a>试一下。如果仍然不行，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
     404 message: "很抱歉！您要寻找的页面未被找到！"
     408 message: "很抱歉我们的服务器没有及时响应。"
     408 explanation: "我们已经接到警示并将尽快解决一切持续存在的问题。 希望您能尽快返回到圣经的阅读中！"
     try again: "再试一次"
   versions:
-    filter: "筛选版本..."
-    see all: "查看全部圣经版本"
+    filter: "筛选译本..."
+    see all: "查看全部圣经译本"
     courtesy of: "%{abbreviation}是由 %{publisher}提供"
     learn more: "获取更多信息"
-    index title: "可用的版本"
+    index title: "可用的译本"
     publisher widget title: "发行商"
     visit publisher: "访问出版商网站"
-    read title: "阅读这个版本"
-    other versions: "此出版社发行的其他版本"
-    number of versions field: "版本总数："
+    read title: "阅读这个译本"
+    other versions: "此出版社发行的其他译本"
+    number of versions field: "译本总数："
     number of languages field: "语言总数："
     language and count: "%{language_name} (%{language_count})"
     public domain: "公共领域"
@@ -979,6 +1001,11 @@ zh-CN:
         tagline: "让我们一起创造历史"
         button: "分享圣经软件"
   ui:
+    characters remaining: "可用字符数"
+    yes button: "是"
+    no button: "否"
+    loading indicator text: "加载中..."
+    loading: "加载中"
     pagination:
       next page: "后一页"
       previous page: "前一页"
