--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,7 @@
 es:
+  time:
+    formats:
+      votd: "%B %-d, %Y"
   social:
     intro page:
       main heading: "Conversación y Descubrimientos"
@@ -11,26 +14,26 @@ es:
         verse: "Me alegro y me regocijo en tu amor, porque tú has visto mi aflicción y conoces las angustias de mi alma."
         reference: "Salmo 31:7"
         discover:
-          copy: "Descubre y aprende con tus amigos mientras ellos agregan resaltados, marcadores y notas."
-          button: "¿Donde puedo empezar?"
+          copy: "Descubra y aprenda con sus amigos mientras ellos agregan resaltados, marcadores y notas."
+          button: "¿Dónde puedo empezar?"
         share:
-          copy: "Comparte conversaciones honestas sobre la Escritura."
-          button: "Busca algunos amigos para iniciar."
+          copy: "Comparta conversaciones honestas sobre la Escritura."
+          button: "Busque algunos amigos para iniciar."
         likes:
           info: "a 4 mas les gusta esto"
         comments:
           first:
             text: "Realmente necesitaba escuchar hoy eso, gracias. ¡Nos pondremos al día pronto!"
-            time: "hace unas 3 horas"
+            time: "hace 3 horas"
           second:
-            text: "Amén, yo también. Ahora mismo te envío un correo electronico."
-            time: "hace unos 27 minutos"
-          field placeholder: "Escribe un comentario..."
+            text: "Amén, yo también. Ahora mismo le envío un correo electrónico."
+            time: "hace 27 minutos"
+          field placeholder: "Escriba un comentario..."
     widget:
       timeline: "Línea de tiempo"
       no activity yet: "No ha habido ninguna actividad aún."
     moment:
-      read all: "Lee todo"
+      read all: "Leer todo"
       read less: "Leer menos"
     share: "Compartir"
     my connections: "Cuentas Conectadas"
@@ -64,7 +67,7 @@ es:
     users username not available: "El nombre de usuario proporcionado no está disponible."
     users username or password invalid: "El nombre de usuario o contraseña que usted proveyó es inválido."
     users username required: "Usted debe ingresar un nombre de usuario."
-    users first name required: "Debe introducir su nombre"
+    users first name required: "Debe introducir su nombre."
     users last name required: "Debe introducir un apellido"
     moments content required: "El contenido no puede estar en blanco"
   meta:
@@ -187,6 +190,17 @@ es:
     lower: "o"
     upper: "O"
   moments:
+    scripture unavailable: "Escritura no disponible"
+    could not load: "No pudo cargar"
+    could not load verse: "No pudo cargar el verso"
+    showing related: "Mostrar momentos relacionados"
+    return to: "Regresar a"
+    time past: "hace %{ago}"
+    user likes this: "A %{last_liker_link} le gusta esto"
+    likes count more: "%{likes_count} más "
+    likes count 2 more: "%{likes_count} más"
+    likes count 3 or more: "%{likes_count} más"
+    users like this: "A %{last_liker_link} y %{more_link} les gusta esto"
     vod:
       title: "Versículo del día"
     friendship:
@@ -203,7 +217,7 @@ es:
       load more: "Cargar más"
       like: "Me gusta"
       liked: "Marcada como Me Gusta"
-      like title: "Me gusta "
+      like title: "Me gusta esto"
       last comment: "Último comentario"
       share: "Compartir"
       share title: "Compartir esto con amigos o familia"
@@ -224,14 +238,14 @@ es:
     no new: "No hay nuevas notificaciones"
     view all: "Ver todas las notificaciones"
   likes:
-    create success: "¡Hecho! Tu like ha sido guardado."
-    create failure: "Su me gusta no pudo ser salvado"
+    create success: "Su Me gusta ha sido guardado"
+    create failure: "Su me gusta no pudo ser guardado"
     destroy success: "Me gusta eliminado"
     destroy failure: "Su me gusta no pudo ser eliminado"
   comments:
-    view all N: "Ver los %{count} comentarios"
+    view all N: "Ver todos los %{count} comentarios"
     post comment: "Publicar un comentario"
-    create success: "¡Hecho! Su comentario fue posteado."
+    create success: "¡Hecho! Su comentario fue publicado."
     create failure: "El comentario no pudo ser publicado"
     destroy success: "Comentario eliminado"
     destroy failure: "El comentario no pudo ser eliminado"
@@ -245,7 +259,7 @@ es:
       heading: "Actualmente no hay amigos"
       description: "Debe tener amistad con esta persona para poder ver sus amigos"
     limit notice: "Puede tener hasta 150 amigos"
-    limit description: "Definir su grupo de amistades en Bible App a las personas que conoce bien, propicia un ambiente de conversaciones francas, compartiendo descubrimientos con amigos de confianza."
+    limit description: "Definir su grupo de amistades en la Biblia App a las personas que conoce bien, propicia un ambiente de conversaciones francas, compartiendo descubrimientos con amigos de confianza."
   friendships:
     find friends title: "Encontrar amigos"
     search by name: "Buscar por nombre"
@@ -323,7 +337,7 @@ es:
     cancel: "Cancelar"
     pop out: "Saltará"
     none found: "No se han encontrado notas..."
-    create success: "¡Hecho! Tu nota ha sido guardada."
+    create success: "¡Hecho! Su nota ha sido guardada."
     create failure: "Error al guardar nota"
     destroy success: "Nota eliminada"
     destroy failure: "Error al eliminar nota"
@@ -361,6 +375,8 @@ es:
     last name: "Apellido"
     agreement: "Estoy de acuerdo con los %{terms_link} de YouVersion."
     terms and conditions: "términos y condiciones"
+    email: "Correo Electrónico "
+    mobile: "Móvil"
     facebook sign up success: "¡Muy bien! Usted ha autorizado con Facebook. Escoja un nombre de usuario y contraseña en YouVersion para continuar."
     register: "Registrarse"
     thanks for registering: "¡Gracias por registrarse!"
@@ -508,7 +524,7 @@ es:
         heading: "Continuar, nada que ver aquí (aún)"
         description: "Comience a involucrarse con la Biblia, o sus amigos y esta página mostrará un historial de lo que ha hecho recientemente"
       visit friend: "Visitar el perfil de  %{friend}"
-      tab activity: "Actividad Reciente"
+      tab activity: "Actividad "
       tab friends: "Amigos"
       tab notes: "Notas"
       tab bookmarks: "Marcadores"
@@ -536,7 +552,7 @@ es:
       transfer_too_slow: "Elige una imagen más pequeña o busca una conexión más rápida"
       picture_invalid_type: "Las imágenes deben estar en formato JPG, PNG o GIF"
       picture_creation form errors: "El (Los) siguiente(s) error(es) impidió/impidieron la actualización de su foto:"
-      updated picture: "!Usted ha actualizado su fotografia exitosamente!"
+      updated picture: "Felicidades! Ha actualizado su foto de perfil. Puede tomar varios minutos actualizarse."
       updated notifications: "¡Usted ha actualizado la configuración de sus notificaciones exitosamente!"
       notifications token error: "Elemento inválido, por favor ingrese para editar la configuración de sus notificaciones."
       notification errors: "El ( los) siguiente (s) error (es) impidió la actualización de sus notificaciones:"
@@ -557,7 +573,7 @@ es:
       friendships: "Notificarme acerca de solicitudes de amistad"
       moments: "Notificarme acerca de la actividad de amigos"
       comments: "Notificarme acerca de comentarios en mi actividad"
-      likes: "Notificarme sobre los likes en mi actividad"
+      likes: "Notificarme acerca de los Me gusta en mi actividad"
   bookmarks:
     new: "Nuevo Marcador"
     edit: "Editar"
@@ -589,7 +605,7 @@ es:
     none user: "%{username} no tiene marcadores"
     blank slate:
       heading: "Marcar versículos significativos"
-      description: "Mientras lea la Biblia seleccione un versículo y márquelo. Regrese aquí para verlo, editarlo o eliminarlo."
+      description: "Mientras lee la Biblia seleccione un versículo y márquelo. Regrese aquí para verlo, editarlo o eliminarlo."
     form:
       title field: "Título:"
       reference field: "Referencia"
@@ -611,6 +627,9 @@ es:
       view my plans: "Ver Mis Planes"
       featured plans: "Planes Destacados"
       view all plans: "Ver todos los Planes"
+      reading: "lectura"
+      readings: "lecturas"
+      readings 5 or more: "lecturas"
     settings: "Configuración"
     privacy:
       visible to friends?: "¿Le gustaría que su actividad en este plan sea visible a sus amigos?"
@@ -656,7 +675,7 @@ es:
     done reading: "Hecho"
     no verses: "No hay versículos para hoy"
     no content: "Su plan no tiene contenido programado para este día, así que ha sido marcado como completo."
-    read today: "Ver la Lectura de Hoy"
+    read today: "Ver la lectura de hoy"
     devotional: "Devocionales"
     completion status _ below percentage: "Finalizado"
     current progress html: "Día <b>%{day}</b> de <b>%{total_days}</b>"
@@ -767,7 +786,7 @@ es:
     choose color: "Elija un color"
     create success: "¡Hecho! Tu resaltado ha sido guardado."
     create failure: "Error al guardar resaltado"
-    destroy success: "Resaltador eliminado"
+    destroy success: "Resaltado eliminado"
     destroy failure: "Error al eliminar resaltado"
     creation error: "Si alguna vez se queda atrás en su lectura, ¡no se preocupe! Usted  siempre puede cambiar la lectura actual volviéndose a su última lectura completada."
     delete error: "Lo sentimos, no se pudo eliminar el resaltado."
@@ -982,8 +1001,13 @@ es:
         tagline: "¡Hagamos historia juntos!"
         button: "Comparta la Biblia App"
   ui:
+    characters remaining: "caracteres restantes"
+    yes button: "Sí."
+    no button: "No"
+    loading indicator text: "Cargando..."
+    loading: "Cargando"
     pagination:
-      next page: "Siguiente Página"
+      next page: "Página siguiente"
       previous page: "Página Anterior"
     datetime:
       just now: "Justo ahora"
